--- a/.gitignore
+++ b/.gitignore
@@ -1,31 +1,18 @@
-# ===== Root ignore (monorepo) =====
-
-# Python / Django
-**/__pycache__/
-**/*.py[cod]
-**/*.sqlite3
-**/db.sqlite3
-**/staticfiles/
-**/media/
-**/.env
-**/venv/
-**/.venv/
-
-# Node / React Native
-**/node_modules/
-**/.expo/
-**/.expo-shared/
-**/dist/
-**/build/
-**/.parcel-cache/
-**/.turbo/
-**/.next/
-**/.output/
-
 # OS / IDE
-**/.DS_Store
-**/.vscode/
-**/.idea/
+.DS_Store
+.vscode/
+.idea/
 
-# Logs
-**/*.log
+# Python
+**/__pycache__/
+*.py[cod]
+*.sqlite3
+venv/
+.env
+
+# Node / Expo
+**/node_modules/
+frontend/.expo/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
